<resources>
    <string name="app_name">Remind Me Later</string>
    <string name="tab_todo">To Do</string>
    <string name="tab_reminder">Reminders</string>
    <string name="sign_in_cancelled">Sign In Cancelled</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="menu_main_user_settings">User Settings</string>
    <string name="dialog_add_to_do_group_title">Add New To Do List</string>
    <string name="hint_title">Title</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_to_do_item_list">ToDoItemListActivity</string>
    <string name="to_do_item_placeholder">To Do Item Placeholder</string>
    <string name="hint_enter_item_name">Enter Item Name</string>
    <string name="dialog_add_to_do_item_label_priority">Priority (optional):</string>
    <string name="dialog_add_to_do_item_label_radio_high">High</string>
    <string name="dialog_add_to_do_item_label_radio_medium">Medium</string>
    <string name="dialog_add_to_do_item_label_radio_low">Low</string>
    <string name="dialog_add_to_do_item_title">Add New To Do Item</string>
    <string name="to_do_item_header">TO DO</string>
    <string name="to_do_item_done_header">DONE</string>
    <string name="dialog_edit_to_do_group_title">Edit To Do List</string>
    <string name="save">Save</string>
    <string name="dialog_delete_to_do_group_title">Delete To Do List</string>
    <string name="delete">Delete</string>
    <string name="reminder_details_recurrence_label">Recurrence:</string>
    <string name="reminder_details_next_occurrence_label">Next:</string>
    <string name="reminder_details_date_button_text">Pick Date</string>
    <string name="reminder_details_description_label">Description:</string>
    <string name="reminder_details_category_label">Select Category:</string>
    <string name="reminder_details_category_add">Add New Category</string>
    <string name="dialog_add_reminder_category_title">Add New Reminder Category</string>
    <string name="dialog_add_category_title">Add New To Do List</string>
    <string name="reminders_file_key">patrick.fuscoe.remindmelater.REMINDERS</string>
    <string name="reminder_broadcast_ids_file_key">patrick.fuscoe.remindmelater.REMINDER_BROADCAST_IDS</string>
    <string name="user_preferences_file_key">patrick.fuscoe.remindmelater.USER_PREFERENCES</string>
    <string name="reminder_icon_ids_file_key">patrick.fuscoe.remindmelater.REMINDER_ICON_IDS</string>
    <string name="notification_channel_name">Remind Me Later Notifications</string>
    <string name="notification_channel_description">Remind Me Later Notification Channel</string>
    <string name="snooze">Snooze</string>
    <string name="done">Done</string>
    <string name="title_activity_user_preferences">UserPreferencesActivity</string>
    <string-array name="array_recurrence">
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>
    <string name="user_preferences_time_button_text">Set Time</string>
    <string name="user_preferences_time_label">Time of Day to Receive Reminders</string>
    <string name="user_preferences_clear_empty_categories_button_label">Clear Empty Reminder Categories</string>
    <string name="reminder_icon_names_file_key">patrick.fuscoe.remindmelater.REMINDER_ICON_NAMES</string>
    <string name="snoozed">Snoozed</string>
    <string name="reminder_notification_ids_file_key">patrick.fuscoe.remindmelater.REMINDER_NOTIFICATION_IDS</string>
    <string name="display_name">Display Name:</string>
    <string name="recurring">Recurring</string>
    <string name="new_user_sign_up">Sign Up With Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_display_name">Display Name</string>
    <string name="sign_up_verify_password">Verify Password</string>
    <string name="hibernating">Hibernating</string>
    <string name="hibernate">Hibernate</string>
    <string name="author_by">by Patrick Fuscoe</string>
    <string name="days_left">Days Left</string>
    <string name="new_reminder">New Reminder</string>
    <string name="sign_up_privacy_tos_checkbox_text">I have read the Privacy Policy and accept the Terms of Service for this App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="tos">Terms of Service</string>
    <string name="copyright_line">Copyright © Patrick Fuscoe 2019</string>
    <string name="web_client_id">812785313358-fcb8rmopmppagltd2crhjc0j85fom2gk.apps.googleusercontent.com</string>
    <string name="select_an_icon">Select an Icon (optional):</string>
    <string name="dialog_to_do_group_name_hint">Enter To Do List Name</string>
    <string name="dialog_reminder_category_name_hint">Enter Reminder Category Name</string>
    <string name="show_tips">Show Tips</string>
    <string name="hide_tips">Hide Tips</string>
    <string name="dialog_delete_reminder_category_title">Delete Reminder Category</string>
    <string name="dialog_edit_reminder_category_title">Edit Reminder Category</string>
    <string name="dialog_edit_to_do_item_title">Edit To Do Item</string>
    <string name="reminder_time_of_day_file_key">patrick.fuscoe.remindmelater.REMINDER_TIME_OF_DAY</string>
    <string name="regular_sign_in_mode_link_text">Returning User or Google Sign In</string>
    <string name="reminder_details_sync_button_text">Sync</string>
    <string name="resend_email_verification">Resend Email Verification</string>
    <string name="dialog_add_new_friend">Add New Friend</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="dialog_share_to_do_group_title">Share To Do List</string>
    <string name="clear">Clear</string>
    <string name="firebase_message_notification_channel_name">Remind Me Later Firebase Message Notifications</string>
    <string name="firebase_message_notification_channel_description">Remind Me Later Firebase Message Notification Channel</string>
    <string name="dialog_send_reminder_title">Send Reminder</string>
    <string name="dialog_remove_friend">Remove Friend</string>
    <string name="remove">Remove</string>
    <string name="user_feedback_description">Enter feedback in the field below and tap \'send\' to email the developer. You can also tap the Rate App link to leave a review on the store page.</string>
    <string name="user_feedback_radio_label_report_bug">Report Bug</string>
    <string name="user_feedback_radio_label_other_feedback">Other Feedback</string>
    <string name="send">Send</string>
    <string name="ok">Ok</string>
</resources>
