<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserFeedbackActivity">

    <TextView
        android:id="@+id/view_user_feedback_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/user_feedback_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group_user_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_user_feedback_description">

        <RadioButton
            android:id="@+id/radio_button_user_feedback_report_bug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_feedback_radio_label_report_bug" />

        <RadioButton
            android:id="@+id/radio_button_user_feedback_other_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_feedback_radio_label_other_feedback" />

    </RadioGroup>

    <EditText
        android:id="@+id/view_user_feedback_field"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="14sp"
        android:background="@drawable/border_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_user_feedback"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="132dp" />

    <Button
        android:id="@+id/button_user_feedback_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_user_feedback_field" />

</androidx.constraintlayout.widget.ConstraintLayout>