<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReminderDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_reminder_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_reminder_details"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <EditText
            android:id="@+id/view_reminder_details_title"
            android:layout_width="wrap_content"
            android:maxWidth="256dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/view_reminder_details_category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/reminder_details_category_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_reminder_details_title" />

        <ImageView
            android:id="@+id/view_reminder_details_category_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/category_account_card_details" />

        <Spinner
            android:id="@+id/view_reminder_details_category_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/view_reminder_details_category_label"
            app:layout_constraintTop_toBottomOf="@+id/view_reminder_details_title" />

        <TextView
            android:id="@+id/view_reminder_details_category_add"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/reminder_details_category_add"
            android:textColor="@color/blueDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_reminder_details_category_icon" />

        <TextView
            android:id="@+id/view_reminder_details_recurrence_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/reminder_details_recurrence_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_reminder_details_category_label" />

        <EditText
            android:id="@+id/view_reminder_details_recurrence_num"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="number"
            android:text="##"
            app:layout_constraintStart_toEndOf="@+id/view_reminder_details_recurrence_label"
            app:layout_constraintTop_toBottomOf="@+id/view_reminder_details_category_label" />

        <Spinner
            android:id="@+id/view_reminder_details_recurrence_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toEndOf="@+id/view_reminder_details_recurrence_num"
            app:layout_constraintTop_toBottomOf="@+id/view_reminder_details_category_label" />

        <TextView
            android:id="@+id/view_reminder_details_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:text="@string/reminder_details_next_occurrence_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_reminder_details_recurrence_label" />

        <TextView
            android:id="@+id/view_reminder_details_date_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/view_reminder_details_date_label"
            app:layout_constraintTop_toBottomOf="@+id/view_reminder_details_recurrence_label" />

        <Button
            android:id="@+id/view_reminder_details_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="26dp"
            android:text="@string/reminder_details_date_button_text"
            app:layout_constraintStart_toEndOf="@+id/view_reminder_details_date_display"
            app:layout_constraintTop_toBottomOf="@+id/view_reminder_details_recurrence_label" />

        <CheckBox
            android:id="@+id/view_reminder_details_checkbox_snoozed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_reminder_details_date_label"
            android:text="@string/snoozed" />

        <TextView
            android:id="@+id/view_reminder_details_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/reminder_details_description_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_reminder_details_checkbox_snoozed" />

        <EditText
            android:id="@+id/view_reminder_details_description"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_reminder_details_description_label" />

        <Button
            android:id="@+id/view_reminder_details_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_reminder_details_description" />

        <Button
            android:id="@+id/view_reminder_details_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/view_reminder_details_button_save"
            app:layout_constraintTop_toBottomOf="@+id/view_reminder_details_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>